Bug 153426 - [B3] Fix control reaches end of non-void function GCC warning after r195139
Summary: [B3] Fix control reaches end of non-void function GCC warning after r195139
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 152952
  Show dependency treegraph
 
Reported: 2016-01-25 09:22 PST by Csaba Osztrogonác
Modified: 2016-01-26 17:11 PST (History)
7 users (show)

See Also:


Attachments
Patch (1.19 KB, patch)
2016-01-25 09:23 PST, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2016-01-25 09:22:09 PST
https://trac.webkit.org/changeset/195139 broke the B3 debug build on Linux:

In file included from ../../Source/JavaScriptCore/b3/air/AirCCallingConvention.h:31:0,
                 from ../../Source/JavaScriptCore/b3/air/AirLowerAfterRegAlloc.cpp:31:
../../Source/JavaScriptCore/b3/air/AirArg.h: In static member function 'static JSC::B3::Air::Arg::Role JSC::B3::Air::Arg::cooled(JSC::B3::Air::Arg::Role)':
../../Source/JavaScriptCore/b3/air/AirArg.h:261:5: error: control reaches end of non-void function [-Werror=return-type]
cc1plus: all warnings being treated as errors


( Since https://trac.webkit.org/changeset/194858 we use ASSERT_NOT_REACHED() 
to be able to catch possible bugs in debug mode. And this warnings are
suppressed in release mode not to cause performance slowdown. )
Comment 1 Csaba Osztrogonác 2016-01-25 09:23:04 PST
Created attachment 269755 [details]
Patch
Comment 2 Michael Catanzaro 2016-01-26 16:21:34 PST
(In reply to comment #0)
> ( Since https://trac.webkit.org/changeset/194858 we use ASSERT_NOT_REACHED() 
> to be able to catch possible bugs in debug mode. And this warnings are
> suppressed in release mode not to cause performance slowdown. )

Oh, I didn't know that; I've been using RELEASE_ASSERT_NOT_REACHED() for this.
Comment 3 WebKit Commit Bot 2016-01-26 17:11:07 PST
Comment on attachment 269755 [details]
Patch

Clearing flags on attachment: 269755

Committed r195640: <http://trac.webkit.org/changeset/195640>
Comment 4 WebKit Commit Bot 2016-01-26 17:11:11 PST
All reviewed patches have been landed.  Closing bug.