[B3] Fix control reaches end of non-void function GCC warning after r195139 https://bugs.webkit.org/show_bug.cgi?id=153426

Reviewed by Michael Catanzaro.

* b3/air/AirArg.h:
(JSC::B3::Air::Arg::cooled):


Canonical link: https://commits.webkit.org/171587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195640 268f45cc-cd09-0410-ab3c-d52691b4dbfc